[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyutx"
version = "0.0.1"
authors = [
  { name="Long Do", email="dothanhlongtld@gmail.com" },
]
description = "Unified Trading eXecution"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dothanhlongtld/pyutx.git"
Issues = "https://github.com/dothanhlongtld/pyutx.git"